# BubbleID-Workflow

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: quick-demo.md  selected-images-demo.md
docs/superpowers/plans/: 2026-05-24-bubbleid-agent-mvp.md
examples/: config.example.json  image-case.example.json
scripts/: run_selected_images_demo.ps1
src/bubbleid_agent/: __init__.py  checks.py  cli.py  config.py  image_case.py  init_case.py  inspector.py  reporter.py  runner.py  segment_images.py
tests/: test_checks.py  test_cli.py  test_config.py  test_image_case.py  test_init_case.py  test_inspector.py  test_reporter.py  test_runner.py  test_segment_images.py
