[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbleid-workflow"
version = "0.1.0"
description = "Reproducible workflow toolkit for BubbleID boiling image analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "UARK-NED3" }
]
dependencies = [
  "numpy>=1.23",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
bubbleid-workflow = "bubbleid_agent.cli:main"
bubbleid-agent = "bubbleid_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
